Formatação dos inputs no formulário de checkout adicionado, API de endereço no checkout adicionado, Melhorias no formulário de sign do header, estrutura de código com o EJS melhorado.

--- a/views/bag.ejs
+++ b/views/bag.ejs
@@ -47,4 +47,4 @@
             </div>
         </div>
     </main>
-<%- include('./components/htmlBottom', {page: 'Bag'}) %> 
+<%- include('./components/htmlBottom', {page: 'Bag', hasFooter: true}) %> 
