--- a/views/catalog.ejs
+++ b/views/catalog.ejs
@@ -110,4 +110,4 @@
             }) %>
         </section>
     </main>
-<%- include('./components/htmlBottom', {page: 'Catalog'}) %> 
+<%- include('./components/htmlBottom', {page: 'Catalog', hasFooter: true}) %> 
