--- a/views/components/style/style-size-picker.ejs
+++ b/views/components/style/style-size-picker.ejs
@@ -18,6 +18,10 @@
             opacity: 0;
         }
 
+    #product-sizes .picker:hover {
+        border-bottom: 2px solid rgba(0, 0, 0, 0.61);
+    }
+
     #product-sizes .picker.selected {
         border-bottom: 2px solid #000F08;;
     }
