--- a/views/product.ejs
+++ b/views/product.ejs
@@ -82,7 +82,4 @@
             ]
         }) %> 
     </main>
-<%- include('./components/htmlBottom', {
-    page: 'Product',
-    carouselList: ['#product-photo-field', '#product-extra-items']
-}) %> 
+<%- include('./components/htmlBottom', {page: 'Product', hasFooter: true}) %> 
