--- a/views/components/sign-up.ejs
+++ b/views/components/sign-up.ejs
@@ -1,24 +1,32 @@
-<main id='sign-up-container'>
-    <form action="">
-        <fieldset>
-            <legend>
-                <h3>CREATE ACCOUNT</h3>
-                <button id='sign-up-close-button' type="button">
-                    <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14.4697 16.0055L0.305137 30.2696C-0.0883785 30.6659 -0.0883785 31.3079 0.305137 31.7042C0.501645 31.9026 0.759655 32.0012 1.01716 32.0012C1.27517 32.0012 1.53268 31.9026 1.72919 31.7042L16.0002 17.3328L30.2713 31.7042C30.4683 31.9026 30.7258 32.0012 30.9833 32.0012C31.2408 32.0012 31.4989 31.9026 31.6954 31.7042C32.0889 31.3079 32.0889 30.6659 31.6954 30.2696L17.5313 16.0055L31.7049 1.7314C32.0984 1.33512 32.0984 0.693112 31.7049 0.296832C31.3113 -0.0989441 30.6738 -0.0989441 30.2808 0.296832L16.0007 14.6782L1.71919 0.297336C1.32568 -0.0984406 0.688652 -0.0984406 0.295137 0.297336C-0.0983788 0.693616 -0.0983788 1.33562 0.295137 1.7319L14.4697 16.0055Z" fill="#1D1D1B"/>
-                    </svg>
-                </button>
-            </legend>
-            <input type="text" name="" placeholder="First Name">
-            <input type="text" name="" placeholder="Last Name">
-            <input type="email" name="" placeholder="E-mail">
-            <input type="password" name="" placeholder="Password">
-            <div>
-                <input type="checkbox" name="" id="box">
-                <label for="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor illum et eaque iste repellendus perspiciatis unde</label>
-            </div>
-        </fieldset>
-        <button>SIGN UP</button>
-        <a href="">I HAVE AN ACCOUNT</a>
-    </form>
+<main id='sign-container'>
+    <div id='sign-box'>
+        <header>
+            <h3 id='sign-box-title'>CREATE ACCOUNT</h3>
+            <button id='sign-close-button' type="button">
+                <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.4697 16.0055L0.305137 30.2696C-0.0883785 30.6659 -0.0883785 31.3079 0.305137 31.7042C0.501645 31.9026 0.759655 32.0012 1.01716 32.0012C1.27517 32.0012 1.53268 31.9026 1.72919 31.7042L16.0002 17.3328L30.2713 31.7042C30.4683 31.9026 30.7258 32.0012 30.9833 32.0012C31.2408 32.0012 31.4989 31.9026 31.6954 31.7042C32.0889 31.3079 32.0889 30.6659 31.6954 30.2696L17.5313 16.0055L31.7049 1.7314C32.0984 1.33512 32.0984 0.693112 31.7049 0.296832C31.3113 -0.0989441 30.6738 -0.0989441 30.2808 0.296832L16.0007 14.6782L1.71919 0.297336C1.32568 -0.0984406 0.688652 -0.0984406 0.295137 0.297336C-0.0983788 0.693616 -0.0983788 1.33562 0.295137 1.7319L14.4697 16.0055Z" fill="#1D1D1B"/>
+                </svg>
+            </button>
+        </header>
+        <div id='sign-form-list'>
+            <form action="" id='sign-up-form'>
+                <input type="text" name="" placeholder="First Name">
+                <input type="text" name="" placeholder="Last Name">
+                <input type="email" name="" placeholder="E-mail">
+                <input type="password" name="" placeholder="Password">
+                <div id='sign-condition-box'>
+                    <input type="checkbox" name="" id="box">
+                    <label for="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor illum et eaque iste repellendus perspiciatis unde</label>
+                </div>
+                <button type="submit" class="sign-submit-button">SIGN UP</button>
+                <button type="button" class="toggle-form-button" id='btn-skip'>I HAVE AN ACCOUNT</button>
+            </form>
+            <form action="" id='sign-in-form'>
+                <input type="email" name="" placeholder="E-mail">
+                <input type="password" name="" placeholder="Password">
+                <button type="submit" class="sign-submit-button">SIGN IN</button>
+                <button type="button" class="toggle-form-button" id='btn-prev'>I DON'T HAVE AN ACCOUNT</button>
+            </form>
+        </div>
+    </div>
 </main>
