--- a/views/components/style/style-header.ejs
+++ b/views/components/style/style-header.ejs
@@ -131,7 +131,7 @@
                         background: darkgrey;
                     }
 
-                        #header-burguer-menu a {
+                        #header-burguer-menu li > * {
                             padding: 20px;
 
                             font-size: 1rem;
@@ -141,6 +141,8 @@
                             justify-content: center;
                             
                             white-space: nowrap;
+
+                            font-family: HelveticaNeue45;
                         }
 
         @media screen and (max-width: 350px) {
