--- a/views/loved-items.ejs
+++ b/views/loved-items.ejs
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bag Modal</title>
+    <title>Loved Items</title>
     <%- include('./components/style/style-preset') %> 
-    <%- include('./components/bagModalPage/style/style-bag-modal-page') %> 
+    <%- include('./components/lovedItemsPage/style/style-loved-items-page') %> 
 </head>
 <body>
     <main>
@@ -33,14 +33,14 @@
                 <a href="/checkout" id='checkout-button'>CHECKOUT</a>
             </div>
 
-            <%- include('./components/bagModalPage/bag-modal-item', {
+            <%- include('./components/lovedItemsPage/loved-item', {
                 title: 'VICTORIOUS SPILT BACK TOP',
                 image: 'https://media.istockphoto.com/photos/fashion-pretty-woman-model-in-colorful-clothes-over-white-background-picture-id603862106',
                 quantity: '1',
                 size: 'S',
                 price: '250.00'
             }) %>
-            <%- include('./components/bagModalPage/bag-modal-item', {
+            <%- include('./components/lovedItemsPage/loved-item', {
                 title: 'VICTORIOUS SPILT BACK TOP',
                 image: 'https://previews.123rf.com/images/panicattack/panicattack1702/panicattack170200014/71400768-young-male-fashion-model-in-casual-clothes-carrying-leather-jacket-over-shoulder-full-body-length-po.jpg',
                 quantity: '1',
@@ -49,32 +49,4 @@
             }) %>
         </section>
     </main>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script>
-        $('#bag-modal-preview').slick({
-            dots: false,
-            infinite: true,
-            speed: 300,
-            slidesToShow: 3,
-            slidesToScroll: 3,
-            responsive: [
-                {
-                    breakpoint: 1100,
-                    settings: {
-                        slidesToShow: 2,
-                        slidesToScroll: 1
-                    }
-                },
-                {
-                    breakpoint: 900,
-                    settings: {
-                        slidesToShow: 1,
-                        slidesToScroll: 1
-                    }
-                }
-            ]
-            });
-    </script>
-</body>
-</html>
+<%- include('./components/htmlBottom', {page: 'Loved Items', hasFooter: false}) %> 
