Página de Collections implementada.

--- a/views/components/catalogPage/style/style-catalog-page.ejs
+++ b/views/components/catalogPage/style/style-catalog-page.ejs
@@ -230,7 +230,7 @@
                     width: 100%;
                 }
 
-                .catalog-item-wishlist-add {
+                .wishlist-add {
                     position: absolute;
 
                     left: 3%;
@@ -239,14 +239,10 @@
                     height: 25px;
                 }
 
-                    .catalog-item-wishlist-add svg {
+                    .wishlist-add svg {
                         height: 25px;
                         width: 25px;
                     }
-
-                        .catalog-item-wishlist-add svg:hover * {
-                            fill: red;
-                        }
 
             .catalog-item-info {
                 padding-top: 10px;
