--- a/views/components/style/style-preset.ejs
+++ b/views/components/style/style-preset.ejs
@@ -131,6 +131,10 @@
         margin: 0;
     }
 
+    .wishlist-add.added svg * {
+        fill: red;
+    }
+
     @media screen and (max-width: 800px) {
         .toggleable {
             max-height: 0;
