Página de Collections aprimorada.

--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -50,7 +50,7 @@
         <ul id="header-burguer-menu">
             <li><a href="/#arrivals">NEW ARRIVALS</a></li>
             <li><a href="/catalog">SHOP</a></li>
-            <li><a>COLLECTIONS</a></li>
+            <li><a href="/collections">COLLECTIONS</a></li>
             <li><button class="sign-open-button">SIGN IN</button></li>
         </ul>
     </nav>
@@ -64,7 +64,7 @@
         <div class="home-page-header-aside desktop left">
             <a href="/#arrivals">NEW ARRIVALS</a>
             <a href="/catalog">SHOP</a>
-            <a>COLLECTIONS</a>
+            <a href="/collections">COLLECTIONS</a>
         </div>
         <a href="/"><h1 class='home-page-header-logo desktop'>BACULEJO'S</h1></a>
         <div class="home-page-header-aside desktop right">
