--- a/views/components/homePage/section.ejs
+++ b/views/components/homePage/section.ejs
@@ -10,6 +10,6 @@
             <%   }
                } %>
         </p>
-        <a><%= button_text %></a>
+        <a href="<%= button_url %>"><%= button_text %></a>
     </div>
 </section>
