--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -4,14 +4,16 @@
         title: 'NEW COLLECTION',
         positions: 'left bottom',
         text: ['Our easiest chuck-on-and-go staples come with a serious style heritage', '<br>', 'that’s liberating, sexy, comfy and supremely cool.'],
-        button_text: 'SHOP NEW ARRIVALS'
+        button_text: 'SHOP NEW ARRIVALS',
+        button_url: '/collections'
     }) %> 
     <%- include('./components/homePage/section', {
         background_image: 'images/mike-palmowski-VHcrw_MENoc-unsplash.jpg',
         title: 'VINTAGE INSPIRED',
         positions: 'left top',
         text: ['Inspired by the ‘70s and 80’s, we know that if you sift through', '<br>', 'our vintage inspired collection you’re gonna rock the perfect silhouette.'],
-        button_text: 'SHOP NOW'
+        button_text: 'SHOP NOW',
+        button_url: '/shop'
     }) %>
     <section id='section-photo-triple'>
         <div id='photo-triple'>
@@ -43,7 +45,8 @@
         title: 'SUSTAINABLE DENIM',
         positions: 'left top',
         text: ['What started as a true ‘80s vintage pair of jeans,', '<br>', 'finished as a re-energised, wider leg vintage jean with versatile detailing.'],
-        button_text: 'SHOP DENIM'
+        button_text: 'SHOP DENIM',
+        button_url: '/shop'
     }) %>
     <%- include('./components/arrivals', {
         title: 'NEW ARRIVALS',
@@ -59,7 +62,8 @@
         title: 'PRAY FOR ROCK',
         positions: 'bottom right',
         text: ['Beloved and forever relevant, there’s a convenience', '<br>', 'factor in a well-built pair of all-in-ones.'],
-        button_text: 'SHOP COLLECTION'
+        button_text: 'SHOP COLLECTION',
+        button_url: '/collection'
     }) %>
     <section id='section-shop'>
         <div id="shop">
