--- a/views/components/collectionsPage/style/style-collections-page.ejs
+++ b/views/components/collectionsPage/style/style-collections-page.ejs
@@ -19,12 +19,12 @@
             margin-bottom: 40px;
         }
 
-            .collection-box h1,
-            .collection-box p {
+            .collection-box > h1,
+            .collection-box > p {
                 padding: 15px 0 20px 2%;
             }
 
-            .collection-box h1 {
+            .collection-box > h1 {
                 width: 100%;
 
                 background-color: red;
@@ -32,7 +32,7 @@
                 max-width: 400px;
             }
             
-            .collection-box p {
+            .collection-box > p {
                 margin: 10px 0 0 2%;
 
                 border-left: 5px solid red;
@@ -46,52 +46,108 @@
                 height: 450px;
             }
 
-                .collection a {
+                .collection-item {
                     display: flex !important;
                     align-items: center;
                     justify-content: center;
 
                     transition: all 0.3s ease;
 
-                    opacity: 0.8;
+                    filter: brightness(80%);
                 }
 
-                    .collection img {
-                        height: 350px;
-                        width: 250px;
+                    .collection-item-field {
+                        display: flex;
+                        flex-direction: column;
 
-                        padding-right: 7px;
+                        justify-content: flex-end;
+                        align-items: center;
 
-                        object-fit: cover;
-
-                        transition: all 0.3s ease;
+                        position: relative;
                     }
 
-                .collection a.slick-current,
-                .collection a.slick-current img {
-                    transform: scale(1.1);
-                    -webkit-transform: scale(1.1);
+                        .collection-item-info {
+                            position: absolute;
+                            
+                            opacity: 0;
 
-                    opacity: 1;
+                            width: calc(100% + 40px);
+
+                            z-index: 2;
+
+                            background: red;
+
+                            padding: 15px;
+
+                            transition: opacity 0.3s ease;
+
+                            box-shadow: 0 1px 100px rgba(0, 0, 0, 0.37);
+                        }
+
+                        .collection-item-field img {
+                            height: 350px;
+                            width: 250px;
+
+                            padding: 0 7px;
+
+                            object-fit: cover;
+
+                            transition: all 0.3s ease;
+                        }
+
+                .collection-item.slick-current,
+                .collection-item.slick-current img {
+                    transform: scale(1.1);
+
+                    filter: brightness(100%);
 
                     position: relative;
                     z-index: 1;
                 }
 
-                    .collection a.slick-current img {
-                        box-shadow: 1px 1px 150px rgba(0, 0, 0, 0.349);
+                    .collection-item.slick-current .collection-item-info {
+                        opacity: 1;
                     }
 
-        @media screen and (max-width: 480px) {
-            .collection-box h1,
-            .collection-box p {
-                text-align: center;
-                justify-content: center;
+                    .collection-item.slick-current img {
+                        box-shadow: 0 -10px 150px rgba(0, 0, 0, 0.349);
+                    }
+
+        @media screen and (max-width: 600px) {
+            .collection-box {
+                max-height: initial;
             }
 
-                .collection img {
-                    height: 350px;
-                    width: 250px;
+                .collection-box > h1,
+                .collection-box > p {
+                    justify-content: center;
+
+                    max-width: initial;
+                }
+
+                .collection-box > h1 {
+                    text-align: center;
+
+                    padding: 10px;
+                }
+
+                .collection-box > p {
+                    text-align: left;
                 }
         }
+
+
+        /* Ajusta o item atual do carousel mais pra direita quando não é o carousel centralizado
+        @media screen and (min-width: 1366px) and (max-width: 1700px) {
+            .collection a.slick-current,
+            .collection a.slick-current img {
+                transform: scale(1.1) translateX(30px);
+            }
+        }
+        @media screen and (min-width: 480px) and (max-width: 768px) {
+            .collection a.slick-current,
+            .collection a.slick-current img {
+                transform: scale(1.1) translateX(20px);
+            }
+        } */
 </style>
