--- a/views/collections-page.ejs
+++ b/views/collections-page.ejs
@@ -6,27 +6,39 @@
             items: [
                 {
                     url: '',
-                    image_url: 'https://media.istockphoto.com/photos/fashion-pretty-woman-model-in-colorful-clothes-over-white-background-picture-id603862106'
+                    image_url: 'https://media.istockphoto.com/photos/fashion-pretty-woman-model-in-colorful-clothes-over-white-background-picture-id603862106',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://previews.123rf.com/images/panicattack/panicattack1702/panicattack170200014/71400768-young-male-fashion-model-in-casual-clothes-carrying-leather-jacket-over-shoulder-full-body-length-po.jpg'
+                    image_url: 'https://previews.123rf.com/images/panicattack/panicattack1702/panicattack170200014/71400768-young-male-fashion-model-in-casual-clothes-carrying-leather-jacket-over-shoulder-full-body-length-po.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://previews.123rf.com/images/korobkova/korobkova1507/korobkova150700048/42194237-beautiful-brunette-model-in-fashion-clothes-posing-in-studio-wearing-coat-handbag-red-shoes.jpg'
+                    image_url: 'https://previews.123rf.com/images/korobkova/korobkova1507/korobkova150700048/42194237-beautiful-brunette-model-in-fashion-clothes-posing-in-studio-wearing-coat-handbag-red-shoes.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg'
+                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg'
+                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg'
+                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
             ]
         }) %>
@@ -36,27 +48,39 @@
             items: [
                 {
                     url: '',
-                    image_url: 'https://media.istockphoto.com/photos/fashion-pretty-woman-model-in-colorful-clothes-over-white-background-picture-id603862106'
+                    image_url: 'https://media.istockphoto.com/photos/fashion-pretty-woman-model-in-colorful-clothes-over-white-background-picture-id603862106',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://previews.123rf.com/images/panicattack/panicattack1702/panicattack170200014/71400768-young-male-fashion-model-in-casual-clothes-carrying-leather-jacket-over-shoulder-full-body-length-po.jpg'
+                    image_url: 'https://previews.123rf.com/images/panicattack/panicattack1702/panicattack170200014/71400768-young-male-fashion-model-in-casual-clothes-carrying-leather-jacket-over-shoulder-full-body-length-po.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://previews.123rf.com/images/korobkova/korobkova1507/korobkova150700048/42194237-beautiful-brunette-model-in-fashion-clothes-posing-in-studio-wearing-coat-handbag-red-shoes.jpg'
+                    image_url: 'https://previews.123rf.com/images/korobkova/korobkova1507/korobkova150700048/42194237-beautiful-brunette-model-in-fashion-clothes-posing-in-studio-wearing-coat-handbag-red-shoes.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg'
+                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg'
+                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg'
+                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
             ]
         }) %>
@@ -66,27 +90,39 @@
             items: [
                 {
                     url: '',
-                    image_url: 'https://media.istockphoto.com/photos/fashion-pretty-woman-model-in-colorful-clothes-over-white-background-picture-id603862106'
+                    image_url: 'https://media.istockphoto.com/photos/fashion-pretty-woman-model-in-colorful-clothes-over-white-background-picture-id603862106',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://previews.123rf.com/images/panicattack/panicattack1702/panicattack170200014/71400768-young-male-fashion-model-in-casual-clothes-carrying-leather-jacket-over-shoulder-full-body-length-po.jpg'
+                    image_url: 'https://previews.123rf.com/images/panicattack/panicattack1702/panicattack170200014/71400768-young-male-fashion-model-in-casual-clothes-carrying-leather-jacket-over-shoulder-full-body-length-po.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://previews.123rf.com/images/korobkova/korobkova1507/korobkova150700048/42194237-beautiful-brunette-model-in-fashion-clothes-posing-in-studio-wearing-coat-handbag-red-shoes.jpg'
+                    image_url: 'https://previews.123rf.com/images/korobkova/korobkova1507/korobkova150700048/42194237-beautiful-brunette-model-in-fashion-clothes-posing-in-studio-wearing-coat-handbag-red-shoes.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg'
+                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg'
+                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
                 {
                     url: '',
-                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg'
+                    image_url: 'https://i.pinimg.com/originals/82/c5/74/82c57469c23ea2e22ab9dfe384b49afe.jpg',
+                    title: 'Produto',
+                    price: '150.50'
                 },
             ]
         }) %>
