--- a/views/components/catalogPage/style/style-catalog-page.ejs
+++ b/views/components/catalogPage/style/style-catalog-page.ejs
@@ -177,7 +177,7 @@
             main#catalog-container {
                 flex-direction: column;
 
-                padding: 80px 2% 0;
+                padding: 80px 2% 40px;
             }
 
             aside, #catalog {
