--- a/views/components/checkoutPage/style/style-checkout-page.ejs
+++ b/views/components/checkoutPage/style/style-checkout-page.ejs
@@ -7,7 +7,7 @@
         top: 0%;
         left: 0px;
 
-        background: red;
+        background: rgba(255, 0, 0, 0.596);
 
         padding: 10px;
 
@@ -83,6 +83,7 @@
                 left: -2px;
 
                 border: 1px solid green;
+                background-color: green;
 
                 transition: width 0.5s ease-in-out;
             }
