--- a/views/components/collectionsPage/collection-box.ejs
+++ b/views/components/collectionsPage/collection-box.ejs
@@ -6,8 +6,8 @@
             <a href="/product" class='collection-item'>
                 <div class='collection-item-field'>
                     <div class='collection-item-info'>
-                        <h3>Produto</h3>
-                        <h4><strong>USD $140.50</strong></h4>
+                        <h3><%= item.title %></h3>
+                        <h4><strong>USD $<%= item.price %></strong></h4>
                     </div>
                     <img src="<%= item.image_url %>" alt="img">
                 </div>
