--- a/views/components/lovedItemsPage/style/style-loved-items-page.ejs
+++ b/views/components/lovedItemsPage/style/style-loved-items-page.ejs
@@ -135,8 +135,8 @@
             width: 100%;
         }
 
-        section#bag-modal-preview {
-            min-height: 500px;
+        section#bag-modal-preview img {
+            height: 600px;
         }
 
         section#bag-modal-aside {
