--- a/views/components/style/style-preset.ejs
+++ b/views/components/style/style-preset.ejs
@@ -19,6 +19,15 @@
         src: url(fonts/helvetica-neue-lt-std-45-light.otf);
     }
 
+    input,
+    textarea,
+    button,
+    select,
+    h3,
+    a {
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
+    }
+
     html {
         scroll-behavior: smooth;
     }
