--- a/views/product-page.ejs
+++ b/views/product-page.ejs
@@ -1,5 +1,5 @@
 <%- include('./components/htmlTop', {page: 'Product'}) %> 
-    <main>
+    <main id='product-container'>
         <section id="product-buy">
             <div id='product-photo-field'>
                 <img class='product-photo' src="https://previews.123rf.com/images/tylero/tylero1602/tylero160200041/52301353-black-fashion-model-wearing-stylish-wardrobe-clothes-and-accessories.jpg">
@@ -69,9 +69,17 @@
             <div id='extra-0'><h1 id='product-extra-items-title'>Complete <br> the look</h1></div>
             <div id='product-extra-items'>
                 <a href='/product' class="extra-item">
+                    <div class="extra-item-info">
+                        <h2>Produto</h2>
+                        <h3><strong>USD $150.00</strong></h3>
+                    </div>
                     <img src="https://image.freepik.com/free-photo/portrait-handsome-smiling-man-wearing-summer-jeans-clothes-model-male-taking-picture-old-vintage-photo-camera_158538-5041.jpg" alt="">
                 </a>
                 <a href='/product' class="extra-item">
+                    <div class="extra-item-info">
+                        <h2>Produto</h2>
+                        <h3><strong>USD $150.00</strong></h3>
+                    </div>
                     <img src="https://images.pexels.com/photos/1926769/pexels-photo-1926769.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
                 </a>
             </div>
