--- a/views/components/collectionsPage/style/style-collections-page.ejs
+++ b/views/components/collectionsPage/style/style-collections-page.ejs
@@ -84,11 +84,13 @@
                             box-shadow: 0 1px 100px rgba(0, 0, 0, 0.37);
                         }
 
+                            .collection-item-info * {
+                                font-family: HelveticaNeue55 !important;
+                            }
+
                         .collection-item-field img {
                             height: 350px;
                             width: 250px;
-
-                            padding: 0 7px;
 
                             object-fit: cover;
 
