--- a/views/components/productPage/style/style-product-page.ejs
+++ b/views/components/productPage/style/style-product-page.ejs
@@ -1,6 +1,6 @@
 <style>
-    main {
-        padding: 80px 0;
+    main#product-container {
+        padding: calc(36px + 2%) 0 0;
     }
 
     section#product-buy {
@@ -211,10 +211,39 @@
                 max-width: 50%;
 
                 filter: brightness(90%);
+
+                position: relative;
             }
 
+                .extra-item-info {
+                    position: absolute;
+
+                    left: 0;
+                    bottom: 5%;
+                    
+                    opacity: 0;
+
+                    width: 70%;
+
+                    background: red;
+
+                    padding: 15px;
+
+                    transition: opacity 0.8s ease-in-out;
+
+                    box-shadow: 0 1px 100px rgba(0, 0, 0, 0.37);
+                }
+
+                    .extra-item-info * {
+                        font-family: HelveticaNeue55 !important;
+                    }
+
+                .extra-item.slick-current .extra-item-info {
+                    opacity: 1;
+                }
+
                 .extra-item img {
-                    height: 100%;
+                    height: 80vh;
                     width: 100%;
 
                     object-fit: cover;
@@ -224,7 +253,7 @@
                     filter: brightness(100%);
                 }
 
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 700px) {
         section#product-buy {
             flex-direction: column;
 
@@ -234,6 +263,10 @@
         #product-photo-field, section#product-buy aside {
             width: 100%;
         }
+
+            .product-photo {
+                height: 550px !important;
+            }
 
         section#product-buy aside {
             padding-top: 70px;
