--- a/views/components/style/style-sign-up.ejs
+++ b/views/components/style/style-sign-up.ejs
@@ -70,6 +70,10 @@
                 justify-content: space-between;
             }
 
+                #sign-box-title {
+                    padding-right: 5px;
+                }
+
                 #sign-container header #sign-close-button {
                     display: flex;
                     align-items: center;
